fixed minor nits

--- a/Week 2 - simple color relationships.ipynb
+++ b/Week 2 - simple color relationships.ipynb
@@ -56,7 +56,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104e67b10>"
+        "<IPython.core.display.HTML at 0x100fb4b10>"
        ]
       }
      ],
@@ -92,7 +92,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104e81850>"
+        "<IPython.core.display.HTML at 0x100fce850>"
        ]
       }
      ],
@@ -150,7 +150,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Javascript at 0x104e81850>"
+        "<IPython.core.display.Javascript at 0x100fce850>"
        ]
       }
      ],
@@ -175,7 +175,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In this section we see the first of several color plates and I am already drawn in to what he has to teach me about the relativity of color, that \"color is the most relative medium in art.\"  Let's mimic the first experiment, making one color look different from itself, using different background colors.  I'm guessing (poorly!) at colors somewhat close to those in the prepared studies in the text itself, using the [color picker available here](http://www.colorpicker.com/)."
+      "In this section we see the first of several color plates and I am already drawn in to what he has to teach us about the relativity of color, that \"color is the most relative medium in art.\"  Let's mimic the first experiment, making one color look different from itself, using different background colors.  I'm guessing (poorly!) at colors somewhat close to those in the prepared studies in the text itself, using the [color picker available here](http://www.colorpicker.com/)."
      ]
     },
     {
@@ -195,7 +195,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104e81910>"
+        "<IPython.core.display.HTML at 0x100fcefd0>"
        ]
       }
      ],
@@ -278,7 +278,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Javascript at 0x104e71f10>"
+        "<IPython.core.display.Javascript at 0x100fce850>"
        ]
       }
      ],
@@ -335,7 +335,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104e81b10>"
+        "<IPython.core.display.HTML at 0x100fce250>"
        ]
       }
      ],
@@ -383,8 +383,6 @@
       "    .on(\"click\", function(){\n",
       "      darken();\n",
       "    });\n",
-      "\n",
-      "  ;\n",
       "    \n",
       "function brighten () {\n",
       "  [inner1, inner2].forEach(function(item) {\n",
@@ -442,8 +440,6 @@
         "    .on(\"click\", function(){\n",
         "      darken();\n",
         "    });\n",
-        "\n",
-        "  ;\n",
         "    \n",
         "function brighten () {\n",
         "  [inner1, inner2].forEach(function(item) {\n",
@@ -462,7 +458,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.Javascript at 0x104e7ec10>"
+        "<IPython.core.display.Javascript at 0x100fcb890>"
        ]
       }
      ],
